# Rustingg

./: .gitignore
Concurency/plain_threads/src/: main.rs
actix-web/: .env  ;  Cargo.toml  configuration.yaml
actix-web/migrations/: 1727966523_create_subscriptions_table.sql
actix-web/scripts/: init_db.sh
actix-web/src/: configuration.rs  lib.rs  main.rs  startup.rs
actix-web/src/routes/: health_check.rs  mod.rs  subscriptions.rs
actix-web/tests/: health_check.rs
async_code/kioto/: Cargo.toml
async_code/patience/: Cargo.toml
async_code/patience/src/: main.rs
eventful/: Cargo.toml
eventful/src/: main.rs
health_statistics/src/: lib.rs
iterators/src/: lib.rs
life_time/life_time_anotation/: Cargo.toml
life_time/life_time_anotation/src/: main.rs
life_time/protobuf_decode/: Cargo.toml
life_time/protobuf_decode/src/: lib.rs
pointers/src/: cell.rs  lib.rs  refcell.rs
strsplit/src/: lib.rs
tcp_server/tcp_server/src/: lib.rs  main.rs
