[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Darwin Tran <darwin_tran@vn.gemteks.com>"]

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on
path = "src/main.rs"
name = "zero2prod"
[dependencies]
actix-web = "4"
tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1", features = ["derive"]}
[dev-dependencies]
reqwest = "0.11.27"
