[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Darwin Tran <darwin_tran@vn.gemteks.com>"]

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on
path = "src/main.rs"
name = "zero2prod"
[dependencies]
actix-web = "4"
tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
config = "0.11"
uuid = { version = "1.11.0", features = ["v4"]}
chrono = "0.4.15"
#env_logger = "0.9"
log = "0.4"
tracing = { version = "0.1.41", feature = ["log"]}
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3.19" , features = ["registry", "env-filter"]}
tracing-log = "0.2.0"
# • runtime-actix-rustls tells sqlx to use the actix runtime for its futures and rustls as TLS
# backend;
# • macros gives us access to sqlx::query! and sqlx::query_as!, which we will be using exten-
# sively;
# • postgres unlocks Postgres-specific functionality (e.g. non-standard SQL types);
# • uuid adds support for mapping SQL UUIDs to the Uuid type from the uuid crate. We need it
# to work with our id column;
# • chrono adds support for mapping SQL timestamptz to the DateTime<T> type from the chrono
# crate. We need it to work with our subscribed_at column;
# • migrate gives us access to the same functions used under the thood by splx-cli to manage migrations. It will turn out to be useful for our test suite
[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.12"
